# Audio-DistilBERT

./: README.md  main_upstream.py  pyproject.toml
config/: distiller_upstream_fbankBase.yaml
dataloader/: dataloader.py
upstream/: mam.py  model.py  optimization.py  runner.py  utils.py
