[project]
name = "audio-distilbert"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "torch>=v1.12.0",
    "tqdm>=4.43.0",
    "numpy>=v1.26.4",
    "tensorboardX>=1.9",
    "matplotlib>=2.2.3",
    "librosa>=0.7.2",
    "PyYAML>=5.1.2",
    "pandas>=0.23.4",
    "librosa>=0.7.2",
    "torchvision>=0.13.0",
    "torchaudio>=0.12.1"
]
